--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <h1>歡迎歡迎 熱烈歡迎</h1>
-        <a href="#" class="hand-drawn-button">進入</a>
+        <a href="src/page1.html" class="hand-drawn-button">進入</a>
     </div>
 </body>
 </html>
