--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
-<!DOCTYPE html>
-<html lang="zh">
+<!doctype html>
+<html lang="en" data-beasties-container>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LargeTaco首頁</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
-        body {
-            margin: 0;
-            padding: 0;
-            background: #f7f3e9;
-            color: #5b4636;
-            font-family: 'Patrick Hand', cursive;
-            text-align: center;
-            overflow: hidden;
-        }
-        .container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            border: 5px solid #d4a373;
-            background: #fff8dc;
-            box-shadow: 5px 5px 0px #c6a57b;
-            border-radius: 10px;
-        }
-        h1 {
-            font-size: 2.5rem;
-            text-shadow: 2px 2px #c6a57b;
-        }
-        .hand-drawn-button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 12px 25px;
-            font-size: 1.2rem;
-            color: #5b4636;
-            text-decoration: none;
-            border: 3px solid #d4a373;
-            border-radius: 5px;
-            background: #fff8dc;
-            box-shadow: 3px 3px 0px #c6a57b;
-            transition: 0.3s;
-        }
-        .hand-drawn-button:hover {
-            background: #f4e3c7;
-            box-shadow: 5px 5px 0px #c6a57b;
-        }
-    </style>
-</head>
+  <meta charset="utf-8">
+  <title>GithubBase</title>
+  <base href="largetaco.github.io">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
-    <div class="container">
-        <h1>歡迎歡迎 熱烈歡迎</h1>
-        <a href="src/page1.html" class="hand-drawn-button">進入</a>
-    </div>
-</body>
+  <app-root></app-root>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-DPZUWWZE.js" type="module"></script></body>
 </html>
